gaia: A couple of tweaks to URLs in SUN/214

--- a/applications/gaia/sun214.tex
+++ b/applications/gaia/sun214.tex
@@ -497,7 +497,7 @@ local catalogue (which you can then edit into your tab files).
 To find out more about the TST format and how to configure plot
 symbols you should consult the ESO document
 \htmladdnormallinkfoot{`Astronomical Catalog Library'}
-{mytt{http://astro.dur.ac.uk/\~{}pdraper/gaia/docs/cat.ps.gz}} and
+{http://astro.dur.ac.uk/~pdraper/gaia/docs/cat.ps.gz} and
 `Writing Catalogue and Image Servers for GAIA and CURSA '
 (\xref{SSN/75}{ssn75}{}).
 
@@ -755,8 +755,7 @@ out about these then consult the postscript documents, which you can
 find from links on the \htmladdnormallinkfoot{SkyCat
 homepage}{http://archive.eso.org/skycat/}. The documents relevant to
 the version of SkyCat that GAIA is based on are also available at
-\htmladdnormallink{\mytt{http://astro.dur.ac.uk/\~{}pdraper/gaia/docs}}
-{http://astro.dur.ac.uk/~pdraper/gaia/docs}. People who would like
+\url{http://astro.dur.ac.uk/~pdraper/gaia/docs}. People who would like
 to extend SkyCat or GAIA at the user interface level are recommended
 to read about ``SkyCat plugins''.
 
